[package]
name = "crowbar"
version = "0.3.6"
authors = [
"Moritz Heiber <hello@heiber.im>",
]
description = "Securily generates temporary AWS credentials through Identity Providers using SAML"
edition = "2018"
license = "Apache-2.0"
homepage = "https://github.com/moritzheiber/crowbar"
repository = "https://github.com/moritzheiber/crowbar"
readme = "README.md"
keywords = ["saml","okta","aws","security"]
categories = ["command-line-utilities","authentication",]

[badges]
maintenance = { status = "actively-developed" }


[profile.release]
panic = "abort"
codegen-units = 1
lto = true
incremental = false
opt-level = "z"

[dependencies]
clap = "2.33.0"
reqwest = { version = "~0.10", features = ["blocking","json","cookies"] }
serde = "~1.0"
serde_derive = "~1.0"
toml = "~0.5"
rusoto_core = "~0.43"
rusoto_sts = "~0.43"
rusoto_credential = "~0.43"
base64 = "~0.12"
log = "~0.4"
keyring = "~0.9"
whoami = "~0.8"
dialoguer = "~0.5"
sxd-document = "~0.3"
sxd-xpath = "~0.4"
regex = "~1.3"
rust-ini = "~0.15"
serde_str = "~0"
serde_json = "~1.0"
walkdir = "~2.3"
env_logger = "~0.7"
dirs = "~2.0"
url = "~2.1"
sha2 = "~0.8"
anyhow = "~1.0"
chrono = { version = "~0.4", features = ["serde"] }
itertools = "~0.9"
confy = "~0.4"
tokio = "~0.2"
console = "~0.10"
select = "~0.4"

[dev-dependencies]
tempfile = "3"
claim = "~0.3"
