[package]
name = "crowbar"
version = "0.4.8"
authors = ["Moritz Heiber <hello@heiber.im>"]
description = "Securily generates temporary AWS credentials through Identity Providers using SAML"
edition = "2021"
license = "Apache-2.0"
homepage = "https://github.com/moritzheiber/crowbar"
repository = "https://github.com/moritzheiber/crowbar"
readme = "README.md"
keywords = ["saml", "okta", "aws", "security"]
categories = ["command-line-utilities", "authentication"]

[badges]
maintenance = { status = "actively-developed" }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
incremental = false
opt-level = "z"

[dependencies]
clap = "2.33.0"
reqwest = { version = "~0.11", features = [
    "blocking",
    "json",
    "cookies",
    "native-tls-vendored",
] }
serde = "~1.0"
serde_derive = "~1.0"
toml = "~0.5"
aws-config = "0.46.0"
aws-sdk-sts = "0.16.0"
aws-smithy-types = "0.46.0"
base64 = "~0.12"
log = "~0.4"
keyring = "~1.1.2"
whoami = "~0.8"
dialoguer = "~0.5"
sxd-document = "~0.3"
sxd-xpath = "~0.4"
regex = "~1.5"
rust-ini = "~0.15"
serde_str = "~0"
serde_json = "~1.0"
walkdir = "~2.3"
env_logger = "~0.9"
dirs-next = "~1"
url = "~2.2"
sha2 = "~0.8"
anyhow = "~1.0"
chrono = { version = "~0.4", features = ["serde"] }
itertools = "~0.9"
confy = "~0.4"
tokio = { version = "1", features = ["full"] }
console = "~0.10"
select = "~0.4"

[dev-dependencies]
tempfile = "3"
claim = "~0.3"
