[package]
name = "crowbar"
version = "0.4.11"
authors = ["Moritz Heiber <hello@heiber.im>"]
description = "Securily generates temporary AWS credentials through Identity Providers using SAML"
edition = "2021"
license = "Apache-2.0"
homepage = "https://github.com/moritzheiber/crowbar"
repository = "https://github.com/moritzheiber/crowbar"
readme = "README.md"
keywords = ["saml", "okta", "aws", "security"]
categories = ["command-line-utilities", "authentication"]

[badges]
maintenance = { status = "actively-developed" }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
incremental = false
opt-level = "z"

[dependencies]
clap = { version = "4.1.8", features = ["cargo"] }
reqwest = { version = "0.11.14", default-features = false, features = [
    "blocking",
    "json",
    "cookies",
    "rustls-tls",
] }
serde = "1.0"
toml = "0.7.2"
aws-config = "0.54.1"
aws-sdk-sts = "0.24.0"
aws-smithy-types = "0.54.1"
base64 = "0.21"
log = "0.4"
keyring = "1.1.2"
whoami = "0.8"
dialoguer = "0.10.3"
sxd-document = "0.3"
sxd-xpath = "0.4.2"
regex = "1.7.1"
rust-ini = "0.18"
serde_str = "0.1"
serde_json = "1.0"
walkdir = "2.3.2"
env_logger = "0.10"
dirs = "4"
url = "2.3.1"
sha2 = "0.10.6"
anyhow = "1.0"
chrono = { version = "0.4.26", default-features = false, features = [
    "clock",
    "std",
    "serde",
] }
itertools = "0.10.5"
confy = "0.5.1"
tokio = { version = "1.26.0", features = ["full"] }
console = "0.15.5"
select = "0.6"

[dev-dependencies]
tempfile = "3"
